# avito_test_task

./: .gitignore  CMakeLists.txt  results.txt
src/: main.cpp
src/common/: types.h
src/file-chunks-processor/: file-chunk-processor-iface.h  multi-thread-file-chunk-processor.cpp  multi-thread-file-chunk-processor.h  utils.cpp  utils.h
src/file-chunks-producer/: async-file-chunks-producer.cpp  async-file-chunks-producer.h  chunk.cpp  chunk.h  exception.cpp  exception.h  file-chunk-producer-iface.h  simple-file-chunks-producer.cpp  simple-file-chunks-producer.h
src/file-reader/: binary-file-reader.cpp  binary-file-reader.h  file-reader-iface.h
src/file-writer/: result-file-writer.cpp  result-file-writer.h
tests/: CMakeLists.txt  merge-part-to-result-tests.cpp  parse-chunk-tests.cpp
